log
Tue 18 Apr 2023 04:03:48 AM UTC: 
 tests:  0|4
total_score: 0/70
9f5a199
Sun 23 Apr 2023 12:17:16 AM UTC: 
 heap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  1|3
total_score: 10/70
0b3f31e
Sun 23 Apr 2023 12:19:59 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:28:25: error: incompatible types when initializing type ‘heapElem *’ {aka ‘struct nodo *’} using type ‘heapElem’ {aka ‘struct nodo’}
   28 |     heapElem* primero = pq->heapArray[0];
      |                         ^~
Compilation failed
47f0dfc
Sun 23 Apr 2023 12:21:58 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:28:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   28 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:29:1: error: control reaches end of non-void function [-Werror=return-type]
   29 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0b4fd6e
Sun 23 Apr 2023 12:22:06 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b7937f8
Sun 23 Apr 2023 12:22:23 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
261aa4b
Sun 23 Apr 2023 12:30:15 AM UTC: 
 heap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:44: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   35 |     pq->heapArray = (heapElem *) realloc(pq->capac, sizeof(heapElem));
      |                                          ~~^~~~~~~
      |                                            |
      |                                            int
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
30d3b29
Sun 23 Apr 2023 12:32:52 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 35/70
ecb7516
Sun 23 Apr 2023 12:33:21 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
f9d38cf
Sun 23 Apr 2023 12:34:50 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:52:5: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘pq’
   52 |   pq->
      |     ^~
Compilation failed
3225dc8
Sun 23 Apr 2023 12:59:41 AM UTC: 
 heap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:61:7: error: statement with no effect [-Werror=unused-value]
   61 |     pq->heapArray pos = aux;
      |     ~~^~~~~~~~~~~
heap.c:61:18: error: expected ‘;’ before ‘pos’
   61 |     pq->heapArray pos = aux;
      |                  ^~~~
      |                  ;
heap.c:59:14: error: unused variable ‘aux’ [-Werror=unused-variable]
   59 |     heapElem aux = pq->heapArray[(pos-1)/2];
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
0ae8bf9
Sun 23 Apr 2023 01:00:17 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
62974d8
